--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ body {
   position: relative;
   border: 130px solid #333232;
   border-radius: 300px;
+  box-shadow: 0px 0px 80px #272222;
   height: 250px;
   width: 250px;
   margin-top: 50px;
@@ -28,6 +29,7 @@ body {
 }
 .messageCenter {
   position: absolute;
+  z-index: 1;
   margin: -16px 0px 0px 20px;
 }
 .messageCenter h2 {
@@ -48,13 +50,30 @@ body {
   width: 70px;
   height: 47px;
   border-radius: 10px;
-  background-color: #441515;
+  background-color: #311414;
+}
+#countBoxText {
+  font-size: 29px;
+  color: #d22424;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  padding-top: 8px;
+  display: '';
+
+  /*animation: blinker 2s linear infinite;*/
+}
+@keyframes blinker {
+  99% {
+    /*color: blue;*/
+  }
 }
 #startCircle {
   width: 25px;
   height: 25px;
   border-radius: 20px;
   border: 5px solid grey;
+  box-shadow: 1px 1px 1px 1px #2722225e;
   background-color: red;
   margin: 12px 0px 0px 25px;
 }
@@ -73,6 +92,7 @@ body {
   height: 25px;
   border-radius: 20px;
   border: 5px solid black;
+  box-shadow: 1px 1px 1px 1px #2722225e;
   background-color: yellow;
 }
 
@@ -136,7 +156,6 @@ body {
 
   margin: -110px;
 }
-
 .doughnut2 { 
   position: absolute;
   border: solid #901212;
@@ -171,5 +190,8 @@ body {
   border-width: 100px;
   height: 125px;
   width: 125px;
+}
+.innerDoughnuts:active {
+  border-color: black;
 }
 /* Child donut end */
